# ST-WindowsContextMenu

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  WindowsContextMenu.sublime-settings  boot.py  messages.json  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: python.yml
menus/: Main.sublime-menu
messages/: update_message.md
plugin/: __init__.py  constants.py  core.py  helpers.py  settings.py  types.py
plugin/commands/: wcm_toggle_open_with.py
typings/: sublime_plugin.pyi
